# tutorial_make

./: .gitignore  CMakeLists.txt  DialogMain.cpp  README.md  tutorial  tutorial.cxx
